# penguins

./: README.md  main.py  pyproject.toml  t_test_penguins.py
data set/: ENGR820_Dataset.csv
results/: results.txt
