[project]
name = "penguins"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.7",
    "palmerpenguins>=0.1.4",
    "pandas>=2.3.3",
    "plt>=0.2.0",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
]
